--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- <h1>200 NODES</h1> -->
     <canvas id="network" width="1240" height="880" STYLE="border:1px solid black;"></canvas>
     <input type="number">
-    <button onclick="exportNodeLocations()">Cluster</button>
+    <button onclick="testing()">Cluster</button>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="nodevisulisation.js"></script>
   </body>
