Info pannel and nodes can be selected and moved now

--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>200 NODES</title>
-  
+  <link rel='stylesheet', href="stylesheet.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
   <body>
-    
+    <div id="draggable" class="ui-widget-content"><img src="deadpool.jpg"></div>
     <!-- <h1>200 NODES</h1> -->
     <canvas id="network" width="1240" height="880" STYLE="border:1px solid black;"></canvas>
     <input type="number">
     <button onclick="testing()">Cluster</button>
+    <button class="ttt">change colour?</button>"
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="nodevisulisation.js"></script>
   </body>
