--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
   <body>
-    <div id="draggable" class="ui-widget-content"><img src="deadpool.jpg"></div>
+    <div id="draggable" class="ui-widget-content">
+      <h1 id="title">TITLE</h1>
+      <p>data</p>
+      <p>data</p>
+      <p>data</p>
+      <button>inspect</button>
+      <button id="close">close</button>
+    </div>
     <!-- <h1>200 NODES</h1> -->
     <canvas id="network" width="1240" height="880" STYLE="border:1px solid black;"></canvas>
     <input type="number">
     <button onclick="testing()">Cluster</button>
-    <button class="ttt">change colour?</button>"
+    <button onclick="againTest()">change colour?</button>"
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="nodevisulisation.js"></script>
   </body>
