commit for the night

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <button onclick="testing()">Cluster</button>
     <button onclick="againTest()">change colour?</button>
     <p>Time Step</p>
-    <input type="number" id="time" name="quantity" min="1" max="5"><br><br>
+    <input type="number" id="time" name="quantity" min="1" max="5" value="0"><br><br>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="nodevisulisation.js"></script>
   </body>
